fixed bug: header -> navigation menu got z-index and now places over another elements

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -257,6 +257,7 @@ body {
 @media screen and (max-width: 750px) {
   .nav-menu {
     position: fixed;
+    z-index: 10;
     right: 0;
     top: 0;
     width: 0px;
