--- a/app/less/blocks/header/nav-menu/nav-menu.less
+++ b/app/less/blocks/header/nav-menu/nav-menu.less
@@ -41,6 +41,7 @@
 @media screen and (max-width: 750px) {
     .nav-menu {
         position: fixed;
+        z-index: 10;
         right: 0;
         top: 0;
         width: 0px;
